internal/kubernetes/frontend.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: acharh
  name: acharh-deploy
spec:
  replicas: 1
  template:
    metadata:
      namespace: acharh
      labels:
        name: acharh-pods
    spec:
      containers:
        - image: cescoferraro/acharh:latest
          imagePullPolicy: Always
          name: frontend
