internal/kubernetes/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: acharh
  name: acharh-svc
spec:
  selector:
    name: acharh-pods
  ports:
  - name: web
    port: 4000
    targetPort: 4000
    protocol: TCP
